[gd_scene load_steps=9 format=2]

[ext_resource path="res://Body/bodyMutation.gd" type="Script" id=1]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Shapes/squareglow.png" type="Texture" id=3]
[ext_resource path="res://Body/Positive Mutations/mutation_Spines.png" type="Texture" id=4]
[ext_resource path="res://Map/whitesquare.png" type="Texture" id=5]
[ext_resource path="res://Bag/UI Elements/bagCards/bagCardCursor.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 156, 40 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="mutationSprite" type="Sprite" parent="."]
position = Vector2( -1.19209e-07, 1.19209e-07 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )

[node name="glow" type="Node2D" parent="."]
visible = false

[node name="glow" type="NinePatchRect" parent="glow"]
modulate = Color( 0.984314, 0.494118, 1, 0.235294 )
margin_left = -132.0
margin_top = -34.0
margin_right = 2508.0
margin_bottom = 646.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="whitesquare" type="Sprite" parent="glow"]
modulate = Color( 0, 0, 0, 0.403922 )
position = Vector2( -0.500008, 0.999999 )
scale = Vector2( 0.231, 0.032 )
texture = ExtResource( 5 )

[node name="Name" type="Label" parent="."]
margin_left = -148.0
margin_top = -24.0
margin_right = 145.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplier" type="Label" parent="."]
visible = false
margin_left = -27.0
margin_top = -74.0
margin_right = 266.0
margin_bottom = -29.0
rect_rotation = 12.1
custom_fonts/font = SubResource( 3 )
text = "x2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mutationButton" type="TextureButton" parent="."]
margin_left = -156.0
margin_top = -51.0
margin_right = 156.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mutationArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="mutationArea"]
position = Vector2( 0, -11 )
shape = SubResource( 2 )

[node name="bagMutationCursor" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.245, 0.245 )
z_index = 30
z_as_relative = false
texture = ExtResource( 6 )
[connection signal="pressed" from="mutationButton" to="." method="_on_mutationButton_pressed"]
[connection signal="area_entered" from="mutationArea" to="." method="_on_mutationArea_area_entered"]
[connection signal="area_exited" from="mutationArea" to="." method="_on_mutationArea_area_exited"]
